<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        
        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/chips_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:chip_deletable="true"
            app:maxRows="3"
            app:showChipDetailed="false"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_border_less"
            android:tint="@color/pink"
            android:src="@drawable/ic_profile"
            android:layout_margin="16dp" />

    </LinearLayout>

    <View
        android:background="#cccccc"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/subject"
        android:layout_margin="16dp"/>
    <View
        android:background="#cccccc"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/compose"
        android:layout_margin="16dp"/>
</LinearLayout>