<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        app:cardElevation="8dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/level1"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/term_of_services"
                    android:layout_margin="8dp"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</LinearLayout>