<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:tint="@color/navigation_bottom_normal"
        android:padding="8dp"
        android:layout_gravity="right"
        android:background="@drawable/ripple_border_less"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginRight="8dp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_small"
        android:layout_gravity="center_horizontal"
        android:tint="@color/light_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/ch_about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/en_about"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:gravity="center"
        android:text="意见反馈：932588764@qq.com"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="24dp"/>
</LinearLayout>